--- a/.gitignore
+++ b/.gitignore
@@ -207,4 +207,4 @@ pip-selfcheck.json
 # End of https://www.toptal.com/developers/gitignore/api/python,venv,visualstudiocode
 
 config.py
-users.json
+config.env
